--- a/Back-end/Dockerfile.backend
+++ b/Back-end/Dockerfile.backend
@@ -7,15 +7,16 @@ WORKDIR /app
 # Set the POSTGRES_HOST_AUTH_METHOD environment variable
 ENV POSTGRES_HOST_AUTH_METHOD=trust
 
-# Copy package files and install dependencies
-COPY Back-end/package.json /app/
-RUN yarn install
+# Copy package files and install dependencies for the backend
+COPY package.json .
+COPY package-lock.json .
+RUN npm install
 
-# Copy the rest of the application files
+# Copy the rest of the backend application files
 COPY . .
 
-# Expose the port the app runs on
-EXPOSE 5000
+# Expose the port the backend app runs on
+EXPOSE 5100
 
-# Define the command to start the app
+# Define the command to start the backend app
 CMD ["npm", "start"]
