--- a/Back-end/Dockerfile.backend
+++ b/Back-end/Dockerfile.backend
@@ -15,6 +15,9 @@ RUN npm install
 # Copy the rest of the backend application files
 COPY . .
 
+# Generate Prisma client
+#RUN npx prisma generate
+
 # Expose the port the backend app runs on
 EXPOSE 5100
 
